test_files/invalid/028-self-outside-class.man
def main()
    a = self
end
